# swagger.json
@@ -2,9 +2,10 @@
   "swagger": "2.0",
   "info": {
     "title": "CSE 341 Project 2 API",
-    "description": "Items API Documentation for CRUD Operations",
+    "description": "Items and Users API Documentation for CRUD Operations",
     "version": "1.0.0"
   },
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "https",
@@ -15,25 +16,27 @@
       "get": {
         "description": "<p style='color: #b0b5bc;'>CLICK THIS ARROW TO LOG IN LOCALLY: <a href='http://localhost:3000/login' target='_blank' style='color: #ffffff; background-color: #24292e; padding: 10px 15px; border-radius: 5px; text-decoration: none; display: inline-block; font-weight: bold;'>➡️</a></p><p style='color: #b0b5bc;'>CLICK THIS ARROW TO LOG IN TO RENDER: <a href='https://cse341project2-0k9h.onrender.com/login' target='_blank' style='color: #ffffff; background-color: #24292e; padding: 10px 15px; border-radius: 5px; text-decoration: none; display: inline-block; font-weight: bold;'>➡️</a></p>",
         "responses": {
-          "200": {
-            "description": "Redirecting to GitHub OAuth"
+          "default": {
+            "description": ""
           }
         }
       }
     },
-
     "/logout": {
       "get": {
-        "description": "Logs the user out and clears their active session.",
+        "description": "",
         "responses": {
-          "200": {
-            "description": "Logged out successfully"
+          "default": {
+            "description": ""
           }
         }
       }
     },
     "/items/": {
       "get": {
+        "tags": [
+          "Items"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -48,7 +51,10 @@
         }
       },
       "post": {
-        "description": "Requires authentication.",
+        "tags": [
+          "Items"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -85,11 +91,11 @@
           "201": {
             "description": "Created"
           },
-          "401": {
-            "description": "Unauthorized - Must log in first"
-          },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -99,7 +105,10 @@
     },
     "/items/{id}": {
       "put": {
-        "description": "Requires authentication.",
+        "tags": [
+          "Items"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -142,11 +151,11 @@
           "204": {
             "description": "No Content"
           },
-          "401": {
-            "description": "Unauthorized - Must log in first"
-          },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -154,7 +163,10 @@
         }
       },
       "delete": {
-        "description": "Requires authentication.",
+        "tags": [
+          "Items"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -167,14 +179,173 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
-            "description": "Unauthorized - Must log in first"
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "organization": {
+                  "example": "any"
+                },
+                "phoneNumber": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "organization": {
+                  "example": "any"
+                },
+                "phoneNumber": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
